--- a/war/checkin/gwt/clean/clean.css
+++ b/war/checkin/gwt/clean/clean.css
@@ -12,6 +12,7 @@ html {
 }
 body {
   margin: 0;
+  overflow-x:hidden;
 }
 article,
 aside,
@@ -6238,6 +6239,18 @@ namelabel{
     margin-left: auto;
     margin-right: auto;
     margin-top: 20vh;
+}
+
+.full-screen{
+	padding: 0px;
+	border: 0px;
+	margin-left: 0px;
+	margin-right:0px;
+	margin-top: 20vh;
+	overflow:hidden;
+	width: 100vw;
+	height: 100vh;
+	max-width:100%;
 }
 
 /*# sourceMappingURL=bootstrap.css.map */
