--- a/war/checkin/gwt/clean/clean.css
+++ b/war/checkin/gwt/clean/clean.css
@@ -1,10 +1,3 @@
-/*!
- * Bootstrap v3.2.0 (http://getbootstrap.com)
- * Copyright 2011-2014 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
-
-/*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -6259,4 +6252,11 @@ namelabel{
 	max-width:100%;
 }
 
-/*# sourceMappingURL=bootstrap.css.map */
+.return-home-button{
+	text-align:left;
+	width: 100vw;
+	border: black;
+	background-color: black;
+	color: white;
+	border-radius: 0px;
+}
